hphp/hack/test/typecheck/new_inference/eager_solve/index_check_union_any.php.exp
File "index_check_union_any.php--file1.php", line 3, characters 10-12:
Was expecting a return type hint (Typing[4030])
